--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -3,8 +3,8 @@
   padding: 0;
 }
 
-.main {
-  /* display: inline-block; */
+.btn-base{
+  display: inline-block;
   width: 160px;
   height: 42px;
   left: calc(50% - 132px/2);
@@ -14,15 +14,33 @@
   font-weight: 600;
   font-size: 13px;
   line-height: 19px;
-
-  color: #FFFFFF;
   text-decoration: none;
-  user-select: none;
   padding: .5em 2em;
-  /* padding: .8em 1em calc(.8em + 3px); */
   border-radius: 4px;
   outline: none;
   border: 1px solid;
+  text-align: center;
+}
+
+.main {
+  /* display: inline-block;
+  width: 160px;
+  height: 42px;
+  left: calc(50% - 132px/2);
+  top: calc(50% - 20px/2); */
+  /* font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 19px; */
+
+  color: #FFFFFF;
+  /* text-decoration: none; */
+  /* user-select: none; */
+  /* padding: .5em 2em;
+  border-radius: 4px;
+  outline: none;
+  border: 1px solid; */
   background: #109CF1;
   box-shadow: 0px 4px 10px rgba(16, 156, 241, 0.24);
   transition: 0.2s; 
@@ -30,138 +48,186 @@
 .main:hover { 
   background: #34AFF9;
   box-shadow: 0px 8px 16px rgba(52, 175, 249, 0.2);
-  border-radius: 4px;
+  /* border-radius: 4px; */
 }
 .main:active {
-  text-align: center;
+  /* text-align: center; */
   letter-spacing: 0.01em;
   box-shadow: 0px 2px 6px rgba(9, 142, 223, 0.3);
   background: #098EDF;
 }
 .main:disabled { 
   /* display: inline-block; */
-  width: 160px;
+  /* width: 160px;
   height: 42px;
   left: calc(50% - 132px/2);
-  top: calc(50% - 20px/2);
-  font-family: Poppins;
+  top: calc(50% - 20px/2); */
+  /* font-family: Poppins;
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
-  line-height: 19px;
+  line-height: 19px; */
   color: #FFFFFF;
   opacity: 0.8;
-  text-decoration: none;
+  /* text-decoration: none;
   padding: .5em 2em;
   border-radius: 4px;
-  border: 1px solid;
+  border: 1px solid; */
   background: #C2CFE0;
 }
 
 .secondary {
   /* display: inline-block; */
-  width: 160px;
+  /* width: 160px;
   height: 42px;
   left: calc(50% - 132px/2);
-  top: calc(50% - 20px/2);
-  font-family: Poppins;
+  top: calc(50% - 20px/2); */
+  /* font-family: Poppins;
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
-  line-height: 19px;
+  line-height: 19px; */
   color: #109CF1;
-  text-decoration: none;
+  /* text-decoration: none;
   user-select: none;
   padding: .5em 2em;
   box-sizing: border-box;
   border-radius: 4px;
-  outline: none;
+  outline: none; */
   border: 1px solid #109CF1; 
-  background:  rgb(255, 252, 252);
+  background:  #E5E5E5;
   transition: 0.2s;
 }
 .secondary:hover { 
   color: #34AFF9; 
-  background: rgb(255, 252, 252);
-  border-color: #5ec0ee;
+  background: #E5E5E5;
+  border: 1px solid #34AFF9;
+  box-sizing: border-box;
 }
 .secondary:active {
   border: 1px solid #098EDF;
   box-sizing: border-box;
-  border-radius: 4px;
-  background: rgb(255, 252, 252);
-  box-shadow: 0 3px 009cf7 inset;
+  /* border-radius: 4px; */
+  background: #E5E5E5;
+  /* box-shadow: 0 3px #009cf7 inset; */
 }
 .secondary:disabled { 
   /* display: inline-block; */
-  width: 160px;
+  /* width: 160px;
   height: 42px;
   left: calc(50% - 132px/2);
-  top: calc(50% - 20px/2);
-  font-family: Poppins;
+  top: calc(50% - 20px/2); */
+  /* font-family: Poppins;
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
-  line-height: 19px;
+  line-height: 19px; */
   color: #C2CFE0;
-  text-decoration: none;
-  padding: .5em 2em;
+  /* text-decoration: none;
+  padding: .5em 2em; */
   border: 1px solid #C2CFE0;
   box-sizing: border-box;
-  border-radius: 4px;
-  color: #b5b6b8; 
-  background: rgb(255, 252, 252);
+  /* border-radius: 4px; */
+  background: #E5E5E5;
 }
 
 .tertiary {
   /* display: inline-block; */
-  width: 160px;
+  /* width: 160px;
   height: 42px;
   left: calc(50% - 132px/2);
-  top: calc(50% - 20px/2);
-  font-family: Poppins;
+  top: calc(50% - 20px/2); */
+  /* font-family: Poppins;
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
-  line-height: 19px;
+  line-height: 19px; */
   color: #109CF1;
-  text-decoration: none;
+  /* text-decoration: none;
   user-select: none;
   padding: .5em 2em;
   border-radius: 4px;
-  outline: none;
+  outline: none; */
   border: none; 
-  background: white;
+  background: #E5E5E5;
   transition: 0.2s;
 }
 .tertiary:hover{ 
   color: #34AFF9; 
-  background:  rgb(255, 252, 252);
+  background:  #E5E5E5;
   border-color: #5ec0ee;
 }
 .tertiary:active, .tertiary-sm:active {
   background: #098EDF;
   box-shadow: 0 3px 009cf7 inset;
-  background:  rgb(255, 252, 252);
+  background:  #E5E5E5;
 }
 .tertiary:disabled { 
   /* display: inline-block; */
-  width: 160px;
+  /* width: 160px;
   height: 42px;
   left: calc(50% - 132px/2);
-  top: calc(50% - 20px/2);
-  font-family: Poppins;
+  top: calc(50% - 20px/2); */
+  /* font-family: Poppins;
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
-  line-height: 19px;
-  text-decoration: none;
-  padding: .5em 2em;
+  line-height: 19px; */
+  /* text-decoration: none; */
+  /* padding: .5em 2em;
   border-radius: 4px;
-  border: none; 
+  border: none;  */
   color: #109CF1;
   opacity: 0.4;
-  background:  rgb(255, 252, 252);
+  background: #E5E5E5;
 }
 
+.accent_blue {
+  color:#109CF1;
+  /* background: #109CF1; */
+}
 
+.yellow {
+  color:#FFB946;
+  /* background: #FFB946; */
+}
+
+.red {
+  color:#F7685B;
+  /* background: #F7685B; */
+}
+
+.black {
+  color: #192A3E;
+  /* background: #192A3E; */
+}
+
+.table_black {
+  color: #323C47;
+  /* background: #323C47; */
+}
+
+.table_gray {
+  color: #707683;
+  /* background: #707683; */
+}
+
+.dark_blue_text {
+  color: #334D6E;
+  /* background: #334D6E; */
+}
+
+.gray {
+  color: #90A0B7;
+  /* background: #90A0B7; */
+}
+
+.icon_gray {
+  color: #C2CFE0;
+  /* background: #C2CFE0; */
+}
+
+.white {
+  color: #FFFFFF;
+  /* background: #FFFFFF; */
+}
