--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,8 @@
   align-items: flex-start;
   justify-content: left;
   font-size: calc(10px + 2vmin);
+  /* margin:0 auto; */
+  padding: 10px;
 }
 
 .App-link {
