--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0; 
+  margin: 0;
   padding: 0;
 }
 
@@ -7,15 +7,15 @@
   display: inline-block;
   width: 160px;
   height: 42px;
-  left: calc(50% - 132px/2);
-  top: calc(50% - 20px/2);
+  left: calc(50% - 132px / 2);
+  top: calc(50% - 20px / 2);
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
   line-height: 19px;
   text-decoration: none;
-  padding: .5em 2em;
+  padding: 0.5em 2em;
   border-radius: 4px;
   outline: none;
   border: 1px solid;
@@ -25,44 +25,46 @@
 }
 
 .btn-main {
-  color: #FFFFFF;
-  background: #109CF1;
+  color: #ffffff;
+  background: #109cf1;
   box-shadow: 0px 4px 10px rgba(16, 156, 241, 0.24);
-  transition: 0.2s; 
+  transition: 0.2s;
 }
-.btn-main:hover { 
-  background: #34AFF9;
+.btn-main:hover {
+  background: #34aff9;
   box-shadow: 0px 8px 16px rgba(52, 175, 249, 0.2);
 }
 .btn-main:active {
   letter-spacing: 0.01em;
   box-shadow: 0px 2px 6px rgba(9, 142, 223, 0.3);
-  background: #098EDF;
+  background: #098edf;
 }
-.btn-main:disabled { 
-  color: #FFFFFF;
+.btn-main:disabled {
+  color: #ffffff;
   opacity: 0.8;
-  background: #C2CFE0;
+  background: #c2cfe0;
   cursor: not-allowed;
+  box-shadow: none;
 }
 
 .btn-secondary {
-  color: #109CF1;
-  border: 1px solid #109CF1; 
+  color: #109cf1;
+  border: 1px solid #109cf1;
   transition: 0.2s;
+  background: none;
 }
-.btn-secondary:hover { 
-  color: #34AFF9; 
-  border: 1px solid #34AFF9;
+.btn-secondary:hover {
+  color: #34aff9;
+  border: 1px solid #34aff9;
   box-sizing: border-box;
 }
 .btn-secondary:active {
-  border: 1px solid #098EDF;
+  border: 1px solid #098edf;
   box-sizing: border-box;
 }
-.btn-secondary:disabled { 
-  color: #C2CFE0;
-  border: 1px solid #C2CFE0;
+.btn-secondary:disabled {
+  color: #c2cfe0;
+  border: 1px solid #c2cfe0;
   box-sizing: border-box;
   cursor: not-allowed;
 }
@@ -73,20 +75,21 @@
   line-height: 0.5em;
   letter-spacing: 0.01em;
   align-items: center;
-  color: #109CF1;
-  border: none; 
+  color: #109cf1;
+  border: none;
   transition: 0.2s;
+  background: none;
 }
-.btn-tertiary:hover{ 
-  color: #34AFF9; 
+.btn-tertiary:hover {
+  color: #34aff9;
   border-color: #5ec0ee;
 }
 .btn-tertiary:active {
-  background: #098EDF;
+  background: #098edf;
   box-shadow: 0 3px 009cf7 inset;
 }
-.btn-tertiary:disabled { 
-  color: #109CF1;
+.btn-tertiary:disabled {
+  color: #109cf1;
   opacity: 0.4;
   cursor: not-allowed;
 }
